--- a/portfolio/SL.html
+++ b/portfolio/SL.html
@@ -218,14 +218,20 @@
           <section class="bg-light-soft section project-content">
             <div class="container">
               <div class="row justify-content-center">
-                <div class="col-md-7">
+                <div class="col-md-9">
                   <div class="content">
                     <p class="mb-6">
-                      SL is the company that runs all land based public
-                      transport systems in Stockolm. I and my team focused on
-                      improving the SL app, partly through reworking the UI and
-                      by adding a points system to encourage more to use public
-                      transport.
+                      <strong>SL runs all land based public transport</strong>
+                      systems in Stockholm. I and my team focused on improving
+                      the SL app, partly through reworking the UI and by adding
+                      a points system to encourage more to use public transport.
+                    </p>
+
+                    <h2 style="font-size: 1.25rem">
+                      <strong>PROBLEM STATEMENT</strong>
+                    </h2>
+                    <p class="mb-6">
+                      How do we get more to use public transport?
                     </p>
 
                     <h2 style="font-size: 1.25rem">
@@ -239,9 +245,25 @@
                     <p class="mb-6">
                       We solved this by creating three types of user behavior to
                       focus on. We came up with these three by making and
-                      releasing a survey, and use the results to make an
-                      affinity diagram. With the affinity diagram, we could
-                      easily picture what kind of needs what kind of people had.
+                      releasing a
+                      <span
+                        style="
+                          background-color: #c9e6f6;
+                          padding: 4px;
+                          border-radius: 8px;
+                        "
+                        >survey</span
+                      >, and used the results to make an
+                      <span
+                        style="
+                          background-color: #c9e6f6;
+                          padding: 4px;
+                          border-radius: 8px;
+                        "
+                        >affinity diagram.</span
+                      >
+                      With the affinity diagram, we could easily picture what
+                      kind of needs what kind of people had.
                     </p>
 
                     <h2 style="font-size: 1.25rem">
@@ -256,6 +278,7 @@
                       <li>Survey</li>
                       <li>Affinity Diagram</li>
                       <li>User Types</li>
+                      <li>Idea Workshop</li>
                       <li>Sketches</li>
                       <li>Site Map</li>
                       <li>Flow Chart</li>
@@ -268,7 +291,7 @@
                     <h2 style="font-size: 1.25rem">
                       <strong>THREE TYPES OF USERS</strong>
                     </h2>
-                    <div class="flexrow">
+                    <div>
                       <div class="p-5" style="background-color: #c9e6f6">
                         <h6><ins>The everyday commuter</ins></h6>
                         <p>
