--- a/portfolio/SL.html
+++ b/portfolio/SL.html
@@ -475,6 +475,7 @@
                       loading="lazy"
                       src="assets/images/projects/SL_mockup.svg"
                     />
+
                     <h2 style="font-size: 1.25rem" class="mt-6">
                       <strong>User tests</strong>
                     </h2>
@@ -502,19 +503,19 @@
                       as you get closer to the end of the project. Not because
                       the job is hard, but because it is so rewarding to be able
                       to test the fully functional and interactive prototype.
+                    </p>
+                    <p>
                       The user tests helped me train my interviewing skills and
                       taught me how valuable it is to test people with different
                       disabilites and of different age.
                     </p>
+                    <img
+                      class="w-75 rounded"
+                      style="max-width: 600px; margin: auto"
+                      loading="lazy"
+                      src="assets/images/projects/SL_mockup_hand.png"
+                    />
 
-                    <div class="row justify-content-center">
-                      <img
-                        class="w-75 rounded m-6"
-                        style="max-width: 600px"
-                        loading="lazy"
-                        src="assets/images/projects/SL_mockup_hand.png"
-                      />
-                    </div>
                     <!-- <center><img class=" src="assets/images/projects/landingPage_phoneMockup.png" alt="Landing page."></center> -->
                   </div>
                 </div>
