--- a/portfolio/bantaba-platform.html
+++ b/portfolio/bantaba-platform.html
@@ -275,6 +275,12 @@
                       I went for an Impact Map as it'd be a constant reminder
                       for me what the stakeholders' needs are.
                     </p>
+                    <img
+                      class="w-100 rounded"
+                      loading="lazy"
+                      src="assets/images/projects/impactmap.png"
+                      alt="Three big bubbles: one representing Startups, one Diaspora, and one representing Bantaba. Startups and Diaspora have smaller bubbles with the stakeholders' needs."
+                    />
 
                     <h5><strong>PERSONAS</strong></h5>
                     <p>
@@ -308,97 +314,66 @@
                       it helped make things less abstract.
                     </p>
 
-                    <h5><strong>WCAG & UX REVIEW</strong></h5>
+                    <h5><strong>PROBLEMS AND THEIR PRIORITIES</strong></h5>
 
-                    <div class="flexrow">
-                      <div class="col-lg-6" style="padding: 20px">
-                        <img
-                          class="w-100 rounded mb-0"
-                          loading="lazy"
-                          src="assets/images/projects/Tree.svg"
-                          alt="A big tree is in the center. People are gathered in a circle around it, talking."
-                        />
-                      </div>
-                      <p>
-                        I hadn’t been aware Bantaba was an ancient word meaning
-                        <mark>‘meeting underneath a tree’</mark> and refers to a
-                        traditional tree-sanctuary where the elders of an
-                        African village gather to make important decisions.
-                        Including this would be a concrete way of telling the
-                        user that we’re here to help them meet - under the tree
-                        of Bantaba - to support each other and grow.<br /><br />
+                    <img
+                      class="w-100 rounded"
+                      loading="lazy"
+                      src="assets/images/projects/userjourneymap.png"
+                      alt="Three big bubbles: one representing Startups, one Diaspora, and one representing Bantaba. Startups and Diaspora have smaller bubbles with the stakeholders' needs."
+                    />
+                    <p>
+                      I did user tests and interviewed 5 people of varying ages,
+                      from 20 to 75+, to find out users pain points. I always
+                      ensure to do user tests with seniors, as they tend to have
+                      a harder time figuring things out and therefore easily
+                      find issues.
+                    </p>
+                    <p>
+                      Based on these tests, I created a user journey map to get
+                      a feel of how the average user experiences their first
+                      time on the platform. This let me know what works and what
+                      doesn't, and helped me prioritise things to work on.
+                    </p>
+                    <br />
+                    <h5><strong>IMPROVING THE UI</strong></h5>
+                    <h6>Matches</h6>
+                    <p class="mb-4">
+                      One thing the user tests taught me was, the mathing just
+                      didn't feel personal and gave very little info about your
+                      match. I ended up replacing the carousel of profile cards,
+                      with two static cards. I also added two more functions:
+                      Dismissing and saving a match.
+                    </p>
 
-                        For this, I ended up putting together an illustration.
-                      </p>
+                    <div id="comparison" class="mb-6" style="margin: auto">
+                      <figure>
+                        <div id="divisor"></div>
+                      </figure>
+                      <input
+                        type="range"
+                        min="0"
+                        max="100"
+                        value="20"
+                        id="slider"
+                        oninput="moveDivisor()"
+                      />
                     </div>
-                    <br />
-                    <h5><strong>Wireframing</strong></h5>
+                    <h6>Cleaning it up</h6>
                     <p>
-                      Once we were satisfied and knew what we wanted to include,
-                      I made a wireframe while the content strategist wrote all
-                      of the content. I used the websites I had looked at before
-                      as inspiration when I puzzled together boxes that’d
-                      represent the future content.
+                      The original feed didn't feel too modern, so I lightened
+                      it up, gave boxes more shadow underneath, and reduced the
+                      amount of colours in the sidebar.
                     </p>
-                    <br />
-                    <!-- <div class="row mt-5 mb-0">                                       -->
-                    <!-- <div class="col-lg-4"> -->
-                    <!-- <img class="w-75 rounded mb-8 mx-auto d-block" loading="lazy" src="assets/images/projects/LandingPageDefault.svg">                                          -->
-                    <!-- </div>            -->
-                    <!-- <div class="col-lg-4">
-                                            <img class="w-100 rounded mb-8" loading="lazy" src="assets/images/projects/01.jpg"> 
-                                        </div>
-                                        <div class="col-lg-4">
-                                            <img class="w-100 rounded mb-8" loading="lazy" src="assets/images/projects/01.jpg"> 
-                                        </div> -->
-                    <!-- </div>  -->
-
-                    <!-- <h5><strong>MORE STUFF HERE</strong></h5>
-                    <p>moreeee</p> -->
-                    <br />
 
                     <img
-                      class="w-75 rounded mb-8 mx-auto d-block"
+                      class="rounded mb-8 mx-auto d-block"
                       loading="lazy"
-                      src="assets/images/projects/LandingPageDefault.svg"
+                      src="assets/images/projects/BeforeAfter.png"
                     />
 
-                    <br />
-                    <h5><strong>Difficulties</strong></h5>
-                    <p>
-                      More often than not, startups need to develop quickly.
-                      Since Bantaba needed the landing page to be released asap,
-                      our front end dev started coding it immediately as
-                      designed. Hence, I couldn’t go back and change anything,
-                      and I had to be really quick with my designs. <br /><br />
-
-                      I hope time won’t be such an issue again to the point
-                      where I need to design as the developer is simultaneously
-                      coding my design. Iterating becomes very difficult that
-                      way.
-                    </p>
-                    <br />
-
-                    <img
-                      class="w-50 rounded mb-8 mx-auto d-block"
-                      loading="lazy"
-                      src="assets/images/projects/LandingPageFAQBlog.svg"
-                    />
-                    <br />
-
-                    <h5><strong>... and the result?</strong></h5>
-                    <p>
-                      Check it out live at
-                      <a href="ourbantaba.com">Bantaba's website!</a>
-                    </p>
-                    <br />
-                    <img
-                      class="w-100 rounded mb-8"
-                      loading="lazy"
-                      src="assets/images/projects/LandingPagePhones.svg"
-                    />
-
-                    <!-- <center><img class=" src="assets/images/projects/landingPage_phoneMockup.png" alt="Landing page."></center> -->
+                    <h5><strong>CONCLUSIONS</strong></h5>
+                    <p>WIP, Coming soon.</p>
                   </div>
                 </div>
               </div>
