--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -267,7 +267,7 @@
                         class="project-block d-block text-reset"
                         data-color="#B1E0C2"
                         href="bantaba-platform.html"
-                        >
+                      >
                         <div class="project-image rounded overflow-hidden">
                           <img
                             class="w-100 rounded"
@@ -383,7 +383,7 @@
                         </div>
                       </a>
                     </div>
-                    <div class="col-md-6">
+                    <!-- <div class="col-md-6">
                       <a
                         class="project-block d-block text-reset"
                         data-color="#00918D"
@@ -442,7 +442,7 @@
                           </div>
                         </div>
                       </a>
-                    </div>
+                    </div> -->
                     <!-- <div class="col-md-6">
                       <a
                         class="project-block d-block text-reset"
