--- a/portfolio/bantaba-landingPage.html
+++ b/portfolio/bantaba-landingPage.html
@@ -193,12 +193,12 @@
                                         landing page ended up average-looking, and customers were confused about what
                                         Bantaba is. Bantaba asked me to solve this. </p>
 
-                                    <p>To figure out what needed to be improved, I analysed feedback Bantaba had
+                                    <h5><strong>USER FEEDBACK</strong></h5>
+                                    <p class="mb-5" > To figure out what needed to be improved, I analysed feedback Bantaba had
                                         received from their users.</p>
 
                                     <p><ins>Some of the issues were:</ins></p>
-                                    <p>
-                                        <ul>
+                                        <ul class="mb-5">
                                             <li>
                                                 <mark>Users didn’t fully understand </mark>what kind of service Bantaba provided
                                             </li>
@@ -217,9 +217,7 @@
                                                 The landing page was <mark>crowded</mark>
                                             </li>
                                         </ul>
-                                    </p>
-                                    <br />
-                                    <h5><strong>FINDING THE SOLUTION</strong></h5>
+                                    <h5><strong>BRAINSTORMING</strong></h5>
 
                                     <p>
                                         Together with the content strategist and CEO, we brainstormed on the potential
