--- a/portfolio/bantaba-landingPage.html
+++ b/portfolio/bantaba-landingPage.html
@@ -188,7 +188,7 @@
                             <div class="col-md-10">
                                 <div class="content">
                                     <h5><strong>THE PROBLEM</strong></h5>
-                                    <p>The original landing page was the result of a week-long work - which included
+                                    <p class="mb-5">The original landing page was the result of a week-long work - which included
                                         writing all content, designing the website, and coding it. Naturally, the
                                         landing page ended up average-looking, and customers were confused about what
                                         Bantaba is. Bantaba asked me to solve this. </p>
@@ -219,12 +219,15 @@
                                         </ul>
                                     <h5><strong>BRAINSTORMING</strong></h5>
 
-                                    <p>
+                                    <p class="mb-5">
                                         Together with the content strategist and CEO, we brainstormed on the potential
                                         content we could include on the new landing page, keeping in mind what I had
                                         gathered from analysing the user feedback. We prioritised making it clear for
                                         the user what Bantaba is.</p>
-                                        
+
+                                    <h5><strong>Wireframing</strong></h5>
+                                    <p class="mb-5">Once we were satisfied and knew what we wanted to include, I made a wireframe while the content strategist wrote all of the content. I used the websites I had looked at before as inspiration when I puzzled together boxes that’d represent the future content.</p>
+                                    
                                     <div class="flexrow">
                                         <div class="col-lg-6" style="padding: 20px;">
                                             <img class="w-100 rounded mb-0" loading="lazy"
@@ -240,10 +243,6 @@
                                             For this, I ended up putting together an illustration.
                                         </p>
                                     </div>
-                                    <br />
-                                    <h5><strong>Wireframing</strong></h5>
-                                    <p>Once we were satisfied and knew what we wanted to include, I made a wireframe while the content strategist wrote all of the content. I used the websites I had looked at before as inspiration when I puzzled together boxes that’d represent the future content.</p>
-                                    <br/>
                                     <!-- <div class="row mt-5 mb-0">                                       -->
                                         <!-- <div class="col-lg-4"> -->
                                             <!-- <img class="w-75 rounded mb-8 mx-auto d-block" loading="lazy" src="assets/images/projects/LandingPageDefault.svg">                                          -->
